AVF: Introduce adoption of AVAssetResourceLoaderDelegate protocol

AVAssetResourceLoaderDelegate allows to load custom resources.

Implemented resourceLoader:shouldWaitForLoadingOfRequestedResource to read data
from QIODevice.

The device should be seekable, and already should have all data available.
Since there is a need to know total size of the stream.

So the media player will wait for QIODevice::readyRead before loading the resource.

Also it requires to have url together with the stream:
QMediaPlayer->setMedia(QUrl("does_not_matter.mp3"), buffer);
Since the backend uses extension to determine type of the stream.

Fixes: QTBUG-69101
Change-Id: I8ab0b69f668ccd67c42a8e5d5c1ad518d3306cce
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>